--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: Feature Request
     about: Request a new feature
     url: https://github.com/djpeach/hsef/issues/new?template=feature_request.md&projects=djpeach%2Fhsef%2F2&labels=enhancement
+  - name: Bug Report
+    about: Report a bug
+    url: https://github.com/djpeach/hsef/issues/new?template=bug_report.md&projects=djpeach%2Fhsef%2F2&labels=bug
