--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,20 @@
-Order Deny,Allow
-Deny from all
+#Order Deny,Allow
+#Deny from all
 
-ErrorDocument 403 /hsef/403.html
+#ErrorDocument 403 /hsef/403.html
+#
+#<FilesMatch ^(index\.php)?$>
+#  Order Allow,Deny
+#  Allow from all
+#</FilesMatch>
+#
+#<FilesMatch ^.*\.(css|js|map.css|html)$>
+#  Order Allow,Deny
+#  Allow from all
+#</FilesMatch>
 
-<FilesMatch ^(index\.php)?$>
-  Order Allow,Deny
-  Allow from all
-</FilesMatch>
+RewriteEngine On
 
-<FilesMatch ^.*\.(css|js|map.css|html)$>
-  Order Allow,Deny
-  Allow from all
-</FilesMatch>
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ index.php [QSA,L]
