--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.9.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.16",
     "vuex": "^3.4.0"
