--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.16",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
