--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@vue/compiler-sfc": "^3.0.2",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "file-loader": "^6.2.0",
     "qs": "^6.9.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
