--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "file-loader": "^6.2.0",
+    "lodash": "^4.17.20",
     "qs": "^6.9.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
